Basic usage of Akka cluster was added. It creates a 'frontend' system which receives some command and a 'backend' system that handles the command received by the other system.

--- a/Clustering/src/main/resources/application.conf
+++ b/Clustering/src/main/resources/application.conf
@@ -1,3 +1,4 @@
+// Remoting, first system.
 Remote-Exercise {
   akka {
     actor {
@@ -13,6 +14,7 @@ Remote-Exercise {
   }
 }
 
+// Remoting, second system.
 Remote-Exercise-Lookup {
   akka {
     actor {
@@ -28,6 +30,7 @@ Remote-Exercise-Lookup {
   }
 }
 
+// Remoting, thrid system.
 Remote-Exercise-Creation {
   akka {
     actor {
@@ -47,5 +50,52 @@ Remote-Exercise-Creation {
     }
   }
 }
+
+// Clustering: Frontend node that handles the incoming requests and sends them to the backend system.
+FrontendNode {
+  akka {
+    actor {
+      provider = "akka.cluster.ClusterActorRefProvider"
+    }
+    remote {
+      enabled-transports = ["akka.remote.netty.tcp"]
+      netty.tcp {
+        hostname = "127.0.0.1"
+        port = 2551
+      }
+    }
+    cluster{
+      roles: ["frontend"]
+      seed-nodes = [
+        "akka.tcp://ClusterSystem@127.0.0.1:2551"
+      ]
+      auto-down-unreachable-after = 10s
+    }
+  }
+}
+
+// Clustering: Backend processing node.
+BackendNode{
+  akka {
+    actor {
+      provider = "akka.cluster.ClusterActorRefProvider"
+    }
+    remote {
+      enabled-transports = ["akka.remote.netty.tcp"]
+      netty.tcp {
+        hostname = "127.0.0.1"
+        port = 0
+      }
+    }
+    cluster{
+      roles: ["backend"]
+      seed-nodes = [
+        "akka.tcp://ClusterSystem@127.0.0.1:2551"
+      ]
+      auto-down-unreachable-after = 10s
+    }
+  }
+}
+
 
 
