--- a/Clustering/src/main/resources/loadbalancer.conf
+++ b/Clustering/src/main/resources/loadbalancer.conf
@@ -2,9 +2,25 @@
 akka {
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
+    deployment {
+      /LoadBalancingFrontendActor/BackendRouter {
+        router = cluster-metrics-adaptive-group
+        #metrics-selector = heap
+        #metrics-selector = load
+        #metrics-selector = cpu
+        metrics-selector = mix
+        nr-of-instances = 100
+        routees.paths = ["/user/BackendRouter"]
+        cluster {
+          enabled = on
+          user-role = backend
+          allow-local-routes = off
+        }
+      }
+    }
   }
   remote {
-    enabled-transports = ["akka.remote.netty.tcp"]
+    log-remote-lifecycle-events = off
     netty.tcp {
       hostname = "127.0.0.1"
       port = 0
@@ -12,30 +28,14 @@ akka {
   }
   cluster{
     seed-nodes = [
-      "akka.tcp://ClusterSystem@127.0.0.1:2551"
-      "akka.tcp://ClusterSystem@127.0.0.1:2552"
+      "akka.tcp://RemoteLoadBalancedSystem@127.0.0.1:2551"
+      "akka.tcp://RemoteLoadBalancedSystem@127.0.0.1:2552"
     ]
     auto-down-unreachable-after = 10s
-    min-nr-of-members = 3
+    min-nr-of-members = 2
     role {
       frontend.min-nr-of-members = 1
-      backend.min-nr-of-members = 2
-    }
-  }
-  deployment{
-    /frontend/BackendRouter {
-      router = adaptative-group
-      #metrics-selector = heap
-      #metrics-selector = load
-      #metrics-selector = cpu
-      metrics-selector = mix
-      nr-of-instances = 100
-      routees.paths = ["/user/BackendRouter"]
-      cluster{
-        enabled = on
-        user-role = backend
-        allow-local-routes = off
-      }
+      backend.min-nr-of-members = 1
     }
   }
 }
